--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "node index"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Jose Naranjo",
+  "license": "MIT",
   "dependencies": {
     "@google-cloud/speech": "^0.11.0",
     "@google-cloud/storage": "^1.4.0",
@@ -16,8 +16,6 @@
     "clui": "^0.3.6",
     "fluent-ffmpeg": "^2.1.2",
     "glob": "^7.1.2",
-    "linear16": "^1.0.1",
-    "mime": "^1.5.0",
     "unzip": "^0.1.11"
   }
 }
